namespaces/live.cloud-platform.service.justice.gov.uk/data-platform-app-prisons-ready-reckoner-app-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-platform-app-prisons-ready-reckoner-app-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "prison-ready-reckoner-app"
    cloud-platform.justice.gov.uk/application: "Prisons Ready Reckoner"
    cloud-platform.justice.gov.uk/owner: "cjs priority projects: "
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/prisons-ready-reckoner-app"
    cloud-platform.justice.gov.uk/team-name: "mh_cjs_priority_projects"
    cloud-platform.justice.gov.uk/review-after: ""
